[gd_scene load_steps=8 format=3 uid="uid://bopcm6dahd10d"]

[ext_resource type="Script" path="res://scripts/water/area_collision_shape_2d.gd" id="1_tiuk7"]
[ext_resource type="PackedScene" uid="uid://dasqgvsn22g0r" path="res://scenes/water/shader_rect.tscn" id="2_2dp1g"]
[ext_resource type="Shader" path="res://shaders/water/shader_rect.gdshader" id="3_rbyua"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dbejg"]
resource_local_to_scene = true
size = Vector2(8, 8)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_286x7"]
seed = 463185929

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_alkdg"]
width = 128
height = 128
seamless = true
seamless_blend_skirt = 0.25
noise = SubResource("FastNoiseLite_286x7")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_03k0v"]
resource_local_to_scene = true
shader = ExtResource("3_rbyua")
shader_parameter/size = Vector2(8, 8)
shader_parameter/noise_texture = SubResource("NoiseTexture2D_alkdg")

[node name="Area2D" type="Area2D"]
z_index = 1
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 2)
shape = SubResource("RectangleShape2D_dbejg")
script = ExtResource("1_tiuk7")
metadata/_edit_lock_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="CollisionShape2D"]
follow_viewport_enabled = true

[node name="ShaderBuffer" parent="CollisionShape2D/CanvasLayer" instance=ExtResource("2_2dp1g")]
material = SubResource("ShaderMaterial_03k0v")
offset_top = -2.0
offset_bottom = 6.0
metadata/_edit_lock_ = true

[connection signal="body_entered" from="." to="CollisionShape2D" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="." to="CollisionShape2D" method="_on_area_2d_body_exited"]
